--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             </div>
 
             <div class="menu-item">
-                <a href="./Publications/Publications.html"> Publications </a>
+                <a href="#Publications"> Publications </a>
             </div>
 
             <div class="menu-item">
-                <a href="./Gallery/Gallery.html"> Gallery </a>
+                <a href="#Gallery"> Gallery </a>
             </div>
 
             <div class="menu-category">
@@ -57,11 +57,7 @@
             </div>
 
             <div class="menu-category">
-                Useful Links
-            </div>
-
-            <div class="menu-item">
-                <a href="./Links.html"> Useful Links </a>
+                <a href="#Links"> Useful Links </a>
             </div>
 
             </td>
@@ -118,7 +114,7 @@
             <blockquote>
                 而世之奇伟、瑰怪，非常之观，常在于险远，而人之所罕至焉，故非有志者不能至也。 &nbsp; &nbsp; ——(宋)王安石
                 <br>
-                But the wonderful, strange and extraordinary landscapes of the world are often found 
+                The wonderful, strange and extraordinary landscapes of the world are often found 
                 in places that are remote and seldom visited. So people without motivations can not see them.    
             </blockquote>
 
@@ -168,7 +164,9 @@
                 <tr>
                     <td>
                         <h3>Master's Degree (2022.10-now)</h3>
-
+                        <p>
+                            &nbsp; &nbsp; &nbsp;Since 2022.10, I have been enrolled in QST program...
+                        </p>
                     </td>
                     <td>
 
@@ -211,6 +209,12 @@
                     </td>
                 </tr>
             </table>
+
+            <a name="Publications"><h2>Publications</h2></a>
+
+            <a name="Gallery"><h2>Gallery</h2></a>
+
+            <a name="Links"><h2>Useful Links</h2></a>
             
         </tr>
         </table>        
