--- a/index.html
+++ b/index.html
@@ -331,9 +331,21 @@
                 <tr>
                     <td>
                         <a name="SH"><h3>External Protection Circuit of Atomic Chip (Summer Internship)</h3></a>
+                        <p>
+                            &nbsp; &nbsp; &nbsp;
+                            For ultracold atoms experiments, it's necessary to use MOT to trap the atoms by 3 pairs of lights with different polarizations
+                            and a pair of coils to generate magnetic trap. However we can use reflection of light at the surface of the chip to reduce the 
+                            number of polarized light to 4. Also, we can use the nanostructure on the chip to generate correspongding quadrature magnetic
+                            trap insted of giant coils. The simplification of MOT, which is atom chip, provides a possibilities in trap atoms in a 
+                            small-scale device.
+                        </p>
+                        <p>
+                            &nbsp; &nbsp; &nbsp;
+                        </p>
                     </td>
                     <td>
-                        a
+                        <img width=400px src="./Research/Atomchip.png" alt="Figure of Atom Chip">
+                        <p>Typical Structure of the Atom Chip</p>
                     </td>
                 </tr>
                 <tr>
@@ -341,7 +353,12 @@
                         <a name="PSD"><h3>Visualization of Position of Light by Detectors</h3></a> 
                     </td>
                     <td>
-                        a
+                        <img width=400px src="./Research/Linear_Effect_Diagram-400.gif" alt="Figure of Atom Chip">
+                        <p>Typical Structure of the Atom Chip</p>
+                        <img width=400px src="./Research/optical_system.jpg" alt="Figure of Atom Chip">
+                        <p>Typical Structure of the Atom Chip</p>
+                        <img width=400px src="./Research/package.jpg" alt="Figure of Atom Chip">
+                        <p>Typical Structure of the Atom Chip</p>
                     </td>
                 </tr>
             </table>
